# web-scraper-studio

./: .env.example  .gitignore  Makefile  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
app/: __init__.py  streamlit_app.py
app/models/: __init__.py  config.py  schemas.py
app/services/: assembler.py  feedback_service.py  scrape_service.py
app/ui/: about.py  components.py  feedback.py  theme.py
app/utils/: files.py  logging.py  text.py  url.py
assets/: theme.css
config/: developer.toml  developer.toml.example
docs/: architecture.md
exporters/: __init__.py  docx_exporter.py  pdf_exporter.py  txt_exporter.py
scraper/: __init__.py  crawler.py  deduper.py  extractor.py  fetcher.py  images.py  parser.py  robots.py
tests/: test_assembler.py  test_deduper.py  test_feedback_service.py  test_parser.py  test_url_utils.py
